Printf(New and Improved)

--- a/Milestone_1/printf()/makefile
+++ b/Milestone_1/printf()/makefile
@@ -6,41 +6,41 @@
 #    By: kmurched <kmurched@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/12/15 15:23:18 by kmurched          #+#    #+#              #
-#    Updated: 2025/12/17 17:47:28 by kmurched         ###   ########.fr        #
+#    Updated: 2025/12/21 17:04:44 by kmurched         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	= 	libftprintf.a
-# Compiler and Flags 
-CC		= 	CC
-CFLAGS	= 	-Wall -Wextra -Werror 
-# Source & Object files to be Compiled 
-SRCS 	= 	ft_printf.c\
-			fun_test.c
+# 1. Variables: The Constants of the Build 
+NAME	= libft.a
+CC		= cc
+CFLAGS	= -Wall -Wextra -Werror
+AR		= ar rc
+RM		= rm -f
 
-OBJS	=	$(SRCS: .c=.o)
-#Defualt Target 
+# 2. Files: Mapping the Sources
+SRCS	= ft_printf.c ft_putnbr_base.c 
+OBJS	= $(SRCS: .c=.o)
 
-.PHONY: all clean fclean re
+# 3. Primary Rule: Creating the 'All' Target/
+all:	$(NAME)
 
-all: $(NAME)
-
-# Link Steps: BUild the final executable 
+# 4. The Library Rule: Creating the .a File 
 $(NAME): $(OBJS)
-		@make -C libft
-		@cp libft/libft.a $(libft)
-		@mv libft.a $(libft)
-		ar rcs $(libft) $(OBJS)
+		$(AR) $(NAME) $(OBJS)
 
-#Compile Steps
-%.o: %.c
-		$(CC) $(CFLAGS) -c $< -o $@
+# 5. Pattern Rule: How *.c file becomes *.o file  
+# 	This tells Make "TO create any .o file, look at the corresponding .c file"
+%.o: %.c 
+		$(CC) $(CFLAGS) -c $< .o $@
 
-#House keeping. 
-clean: rm -f $(OBJ)
-		@make clean -c
+# 6. Maintenance Rules: Keeping Clean
+clean: 
+		$(RM) $(OBJS)
 
-fclean: clean 
-		rm $(NAME)
+fclean:	clean
+		$(RM) $(NAME)
 
-re:		fclean all
+re:	fclean all
+
+# 7. .PHONY: Preventing name conflicts with actual files 
+.PHONY: al clean fclean re
